Feb 23, 2024 : 0.20 released!
  - major threading restructured
  - improved H265 slices combining

Feb 22, 2024 : 0.19 released!
  - fixed group listing
  - rtsp fixes

Feb 22, 2024 : 0.18 released!
  - support more cameras

Feb 21, 2024 : 0.17 released!
  - fix supporting more cameras
  - fix more leaks

Feb 20, 2024 : 0.16 released!
  - fix many memory leaks

Feb 18, 2024 : 0.15 released!
  - finally fixed stability issues

Feb 17, 2024 : 0.14 released!
  - fix config issues
  - fix service shutdown
  - fix viewer/decoder

Feb 2, 2024 : 0.13 released!
  - new : added high/low res streams
  - new : added viewer
  - new : added H.265 codec

Nov 25, 2020 : 0.12 released!
  - new : launcher now selects best GC
    - adds support for Windows < 1803

Sept 28, 2020 : 0.11 released!
  - new : PLC tag : modbus now supports IR and HR tags

Aug 26, 2020 : 0.10 released!
  - fix : use proper endianness of PLC tags

July 8, 2020 : 0.9 released!
  - new : added picture snapshots triggered by PLC tag
  - new : config file format has changed (upgrade is automatic)

Mar 20, 2020 : 0.8 released!
  - fix : buffer overflow issues

Mar 18, 2020 : 0.7 released!
  - fix : win64 loader now loads msvcrt dlls properly

Mar 17, 2020 : 0.6 released!
  - fix : use 24 hour format for filenames

Mar 9, 2020 : 0.5 released!
  - fix : finding ffmpeg libraries
  - new : use ZGC which uses less virtual memory
    - requires Win10-1803 or Win Server 2019 or better

Mar 2, 2020 : 0.4 released!
  - new : added motion & image preview
  - fix : file size logic was incorrect

Mar 1, 2020 : 0.3 released!
  - new : updating a camera config no longer stops/starts the camera
    (this often caused app to crash due to out of memory)
  - fix : new recordings were not counted towards camera max storage

Feb 28, 2020 : 0.2 released!
  - undo running in multiple processes - ran out of virtual memory

Jan 7, 2020 : 0.1 released!
  - init release