@@ -1,3 +1,9 @@
+Feb 26, 2024 : 0.21 released!
+  - finally fixed stability issues (v0.13-v0.20 were unstable)
+    the problem was my old nemesis the garbage collector
+    switching to the ZGC has seemed to fix the issue
+  - many minor fixes
+
 Feb 23, 2024 : 0.20 released!
   - major threading restructured
   - improved H265 slices combining
